--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /*  your css code here. If applicable */
+table{
+	border: 1px solid black;
+	background: yellow;
+}
+
+th{
+	border: 1px solid black;
+	background: yellow;
+}
+
+td{
+	border: 1px solid black;
+	background: yellow;
+}
